# clicker-rs

./: Cargo.toml  Justfile  README.md  flake.nix
common/: Cargo.toml
common/src/: ipc.rs  lib.rs
ctl/: Cargo.toml
ctl/src/: main.rs
daemon/: Cargo.toml
daemon/src/: config.rs  device.rs  main.rs  virtual_pointer.rs
nix/: nixos.nix  package.nix
