[package]
name = "common"
keywords.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
description.workspace = true
readme.workspace = true

[dependencies]
anyhow = { version = "1.0.100", default-features = false }
serde = { version = "1.0.226", features = ["rc"], default-features = false }
serde_json = "1.0.145"
