[package]
name = "common"
keywords.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
description.workspace = true
readme.workspace = true

[dependencies]
anyhow = { version = "1.0.100", default-features = false }
evdev = "0.13.2"
serde = { version = "1.0.226", features = ["rc"], default-features = false }
serde_json = "1.0.145"
nix = { default-features = false, features = [ "fs", "user" ], version = "0.30.1" }
tvix_eval = { git = "https://code.tvl.fyi/depot.git", rev = "a4935331b134eabe169495c73f3a0b60411b59e3", package = "tvix-eval" }
