[package]
name = "ctl"
keywords.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
description.workspace = true
readme.workspace = true

[dependencies]
common = { workspace = true }
anyhow = { version = "1.0.98", default-features = false }
serde_json = "1.0.140"
clap = "4.5.37"
log = "0.4.27"
serde = "1.0.226"
